# pushkind-files

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pushkind-files.service
.github/workflows/: deploy_dev.yml  test_pr.yml
assets/: filebrowser.js
config/: default.yaml  local.yaml  prod.yaml
src/: lib.rs  main.rs  middleware.rs
src/domain/: mod.rs
src/dto/: mod.rs
src/forms/: main.rs
src/models/: auth.rs  config.rs
src/routes/: main.rs  mod.rs
src/services/: files.rs  mod.rs
templates/: base.html  navigation.html
templates/components/: file.html  file_browser.html  folder.html  navigation.html
templates/main/: index.html  new_folder_modal.html  not_assigned.html
