[package]
name = "pushkind-files"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-multipart = "0.7.2"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.11.0"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tera = { version = "1.20.0", features = ["builtins"] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
