[package]
name = "pushkind-files"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-identity = "0.9.0"
actix-multipart = "0.7.2"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.12.1"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
tera = { version = "1.20.1", features = ["builtins"] }
uuid = { version = "1.19.0", features = ["v4"] }
pushkind-common = { git = "https://github.com/pushkindt/pushkind-common.git", branch = "main", features = [
    "actix",
] }
validator = { version = "0.20.0", features = ["derive"] }
actix-cors = "0.7.1"
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
thiserror = "2.0.16"
tempfile = "3.23.0"
